@@ -1,3 +1,0 @@
-module Random = ExtRandom.Random
-module Base64 = Base64
-module Digest = Digest
